@@ -1,5 +1,13 @@
 2012-02-04  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/gettext/gettext.c: Mostly rewritten to avoid using
+	lists (by always binsearching), improve caching (cache strings
+	used for binsearch, not only results), improve
+	maintainability (by using more structured binary search) and correct
+	error handling.
+
+2012-02-04  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/script/execute.c (grub_script_return): Fix warning.
 
 2012-02-04  Vladimir Serbinenko  <phcoder@gmail.com>
